# rust_dev

./: .env  Cargo.toml
migrations/2022-10-29-064148_users/: up.sql
migrations/2022-10-30-091946_files/: down.sql  up.sql
migrations/2022-11-02-124524_assets/: down.sql  up.sql
src/: main.rs
src/crypto/: aes.rs  hash.rs  hex.rs  mod.rs
src/handlers/: mod.rs  test.rs  user.rs
src/middleware/: err_alert.rs  err_detector.rs  mod.rs
src/models/: asset.rs  db.rs  file.rs  mod.rs  response.rs  schema.rs  user.rs
src/utils/: email.rs  mod.rs  pattern.rs
