[package]
name = "server"
version = "0.1.0"
edition = "2021"

#[profile.release]
#opt-level = 'z'     # Optimize for size.
#lto = true          # Enable Link Time Optimization
#codegen-units = 1   # Reduce number of codegen units to increase optimizations.
#panic = 'abort'     # Abort on panic
#strip = true        # Strip symbols from binary*

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.2.1", features = ["openssl"] }
actix-session = { version = "0.7.2", features = ["cookie-session"] }
cookie = "0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "2.0.0", features = ["postgres", "r2d2","serde_json"] }
r2d2 = "0.8.10"
dotenvy = "0.15"
regex = "1.7.0"
once_cell = "1.16.0"
derive_more = "0.99.17"
#log = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
lettre = "0.10"
chrono = "0.4.23"
rpassword = "7.0"
clap = {version = "4.0.23", features = ["derive"]}
openssl = "0.10.42"